<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_settings"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:minWidth="260dp"
    android:theme="@style/Theme.Bottom">

    <TextView
        android:id="@+id/app_settings_t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:textColor="@color/default_blue"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/app_settings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/setting_language"
        android:textColor="@color/default_blue"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/app_settings_text"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        >

        <RadioButton
            android:id="@+id/app_settings_ru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/setting_language_rus"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/app_settings_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/setting_language_eng"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>


    <Button
        android:id="@+id/app_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="135dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/clear_history" />
</RelativeLayout>

