<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_time"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:minWidth="260dp"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:theme="@style/Theme.Bottom">

    <TextView
        android:id="@+id/end_measurement_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/window_duration_title"
        android:textColor="@color/default_blue"
        android:textSize="15dp" />

    <ImageView
        android:id="@+id/end_measurement_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/end_measurement_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/stop" />

    <ImageView
        android:id="@+id/rectimage1"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_below="@id/end_measurement_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/rectangle" />

    <Button
        android:id="@+id/end_measurement_button_immediate"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/rectimage1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25sp"
        android:text="@string/window_duration_btn_untilsorage" />

    <ImageView
        android:id="@+id/rectimage2"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_below="@id/rectimage1"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:src="@drawable/rectangle" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/end_measurement_button_ok"
        android:layout_alignTop="@id/rectimage2"
        android:layout_marginTop="20dp"
        app:errorEnabled="false"
        app:hintEnabled="false"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/end_measurements_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:fontFamily="@font/roboto_bold"
            android:inputType="number"
            android:maxLength="3"
            android:paddingStart="0dp"
            android:paddingTop="16dp"
            android:paddingEnd="0dp"
            android:text="60" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/end_measurement_spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/end_measurement_button_cancel"
        android:layout_alignTop="@id/rectimage2"
        android:layout_marginTop="33dp"
        android:entries="@array/time" />

    <Button
        android:id="@+id/end_measurement_button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rectimage2"
        android:layout_alignLeft="@id/rectimage2"
        android:layout_marginLeft="46dp"
        android:layout_marginBottom="10dp"
        android:text="ОК" />

    <Button
        android:id="@+id/end_measurement_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rectimage2"
        android:layout_alignRight="@id/rectimage2"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cancel_btn" />
</RelativeLayout>

