<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:weightSum="40"
    tools:context=".ui.temperature.pages.TemperatureChartFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_weight="18"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="10">
            <TextView
                android:id="@+id/nfc_id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:background="#FF6600"
                android:paddingLeft="10dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="NFC ID"
                android:textColor="#ffffff"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/nfc_id_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="6"
                android:translationX="-30dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_textview"
                android:gravity="center"
                android:text="04:83:63:00:00:76:0E:0C"
                android:textColor="#FF6600"
                android:textSize="@dimen/medium_text_size"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="10">
            <TextView
                android:id="@+id/number_of_measurements"
                android:text="@string/chart_count"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:paddingLeft="10dp"
                android:background="#FF6600"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="#ffffff"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/number_of_measurements_text"
                android:text="1051"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="6"
                android:translationX="-30dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_textview"
                android:gravity="center"

                android:textColor="#FF6600"
                android:textSize="@dimen/medium_text_size"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="10">
            <TextView
                android:id="@+id/configuration_time"
                android:text="@string/chart_config_time"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:paddingLeft="10dp"
                android:background="#FF6600"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="#ffffff"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/configuration_time_text"
                android:text="2021-7-9 10:57:08"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="6"
                android:translationX="-30dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_textview"
                android:gravity="center"
                android:textColor="#FF6600"
                android:textSize="@dimen/medium_text_size"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="10">
            <TextView
                android:id="@+id/logging_for"
                android:text="@string/chart_logging_for"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="4"
                android:paddingLeft="10dp"
                android:background="#FF6600"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="#ffffff"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/logging_for_text"
                android:text="25 секунд"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="6"
                android:translationX="-30dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_textview"
                android:gravity="center"
                android:textColor="#FF6600"
                android:textSize="@dimen/medium_text_size"
                />
        </LinearLayout>
    </LinearLayout>

    <WebView
        android:id="@+id/webview_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" >
        <TextView
            android:id="@+id/values_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="28"
            android:textColor="#079F0D"
            android:textStyle="bold"
            android:textSize="@dimen/big_text_size"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/values_count"
            app:layout_constraintBottom_toTopOf="@id/status"
            app:layout_constraintHorizontal_chainStyle="packed"
            />

        <TextView
            android:id="@+id/values_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_measurements_count"
            android:textColor="@color/default_blue"
            android:textStyle="bold"
            android:textSize="@dimen/big_text_size"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/values_count_text"
            app:layout_constraintBottom_toTopOf="@id/status"
            />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_measured_status"
            android:textColor="@color/default_blue"
            android:textStyle="bold"
            android:textSize="@dimen/big_text_size"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/status_text"
            app:layout_constraintBottom_toTopOf="@id/measurment_intertval"
            app:layout_constraintHorizontal_chainStyle="packed"
            />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ОК"
            android:textColor="#079F0D"
            android:textStyle="bold"
            android:textSize="@dimen/big_text_size"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/status"
            app:layout_constraintBottom_toTopOf="@id/measurment_intertval"
            />


        <TextView
            android:id="@+id/measurment_intertval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_interval"
            android:textColor="@color/default_blue"
            android:textStyle="bold"
            android:textSize="@dimen/big_text_size"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/measurment_intertval_text"
            app:layout_constraintBottom_toTopOf="@id/min_valid_label"
            app:layout_constraintHorizontal_chainStyle="packed"
            />

        <TextView
            android:id="@+id/measurment_intertval_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15 минут"
            android:textColor="#079F0D"
            android:textStyle="bold"
            android:textSize="@dimen/big_text_size"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/measurment_intertval"
            app:layout_constraintBottom_toTopOf="@id/min_valid_label"
            />

        <TextView
            android:id="@+id/min_valid_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_validMin"
            android:textColor="@color/default_blue"
            android:textStyle="bold"
            android:textSize="@dimen/big_text_size"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/min_valid_text"
            app:layout_constraintBottom_toTopOf="@id/max_valid_label"
            app:layout_constraintHorizontal_chainStyle="packed"
            />

        <TextView
            android:id="@+id/min_valid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 'C"
            android:textColor="#079F0D"
            android:textStyle="bold"
            android:textSize="@dimen/big_text_size"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/min_valid_label"
            app:layout_constraintBottom_toTopOf="@id/max_valid_label"
            />

        <TextView
            android:id="@+id/max_valid_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart_validMax"
            android:textColor="@color/default_blue"
            android:textStyle="bold"
            android:textSize="@dimen/big_text_size"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/max_valid_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            />

        <TextView
            android:id="@+id/max_valid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15 'C"
            android:textColor="#079F0D"
            android:textStyle="bold"
            android:textSize="@dimen/big_text_size"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/max_valid_label"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/page"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:src="@drawable/page2"
        android:layout_weight="1"
        android:layout_gravity="center"
 />







</LinearLayout>